2010-10-29  Aaron Colwell  <acolwell@chromium.org>

Reviewed by James Robinson.

        Added a layout test for verifying that globalAlpha is properly handled
        when copying a video frame to a 2D canvas context.
        https://bugs.webkit.org/show_bug.cgi?id=48094

        * media/video-canvas-alpha-expected.txt: Added.
        * media/video-canvas-alpha.html: Added.
        * platform/chromium-mac/media/video-canvas-alpha-expected.checksum: Added.
        * platform/chromium-mac/media/video-canvas-alpha-expected.png: Added.
        * platform/chromium-win/media/video-canvas-alpha-expected.checksum: Added.
        * platform/chromium-win/media/video-canvas-alpha-expected.png: Added.
2010-10-29  Aaron Colwell  <acolwell@chromium.org>

        Reviewed by James Robinson.

        Created helper method WebCore::PlatformContextSkia::getNormalizedAlpha()
        to centralize alpha rounding & clipping logic.
        https://bugs.webkit.org/show_bug.cgi?id=48094

        Test: media/video-canvas-alpha.html

        * platform/graphics/skia/ImageSkia.cpp:
        (WebCore::paintSkBitmap):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::getNormalizedAlpha):
        * platform/graphics/skia/PlatformContextSkia.h:
2010-10-29  Aaron Colwell  <acolwell@chromium.org>

        Reviewed by James Robinson.

        Fix globalAlpha support when using drawImage() to copy a video frame
        to a 2D canvas context.
        https://bugs.webkit.org/show_bug.cgi?id=48094

        This fix applies the globalAlpha value to the canvas before passing it
        down to the lower layers that don't have access to the graphics
        context. This makes sure that any drawing on the canvas will have the
        proper global alpha value applied.

        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::paint):

Canonical link: https://commits.webkit.org/61423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70919 268f45cc-cd09-0410-ab3c-d52691b4dbfc